--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,48 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  background: #7db8df;
+  color: #351c75;
+  margin: 0;
+  padding: 0;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+  color: #0c23f2;
+  margin-left: 20px;
+  font-size: 1.1rem;
+  margin-right: 20px;
+  padding-right: 20px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+a:hover {
+  text-decoration: underline;
+}
+
+.container {
+  padding: 20px;
+  width: 100%;
+  max-width: 1200px; /* Узгоджена ширина з хедером */
+  margin: 0 auto;
+  min-height: calc(
+    100vh - 200px
+  ); /* Регулює висоту з урахуванням хедера, контактної стрічки та футера */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.headerContainer {
+  max-width: 1200px; /* Максимальна ширина для центрування */
+  margin: 0 auto;
+  width: 100%;
+  position: sticky; /* Фіксує елемент на екрані при прокручуванні */
+  top: 0;
+  z-index: 1000; /* Встановлює пріоритет, щоб було поверх інших елементів */
+  background-color: #ffffff; /* Задає фон для уникнення прозорості */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Опційно: додає тінь */
 }
