--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 20px;
+  padding: 5px;
   width: 100%;
   max-width: 1200px; /* Узгоджена ширина з хедером */
   margin: 0 auto;
@@ -9,5 +9,5 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background: #cddf7d;
+  background-color: aqua;
 }
