--- a/app/components/DoctorsDepartment/DoctorsDepartment.module.css
+++ b/app/components/DoctorsDepartment/DoctorsDepartment.module.css
@@ -17,8 +17,9 @@
   display: flex;
   flex-wrap: wrap;
   gap: 16px;
-  justify-content: center;
+  /* justify-content: center; */
   padding: 20px;
+  justify-content: start;
 }
 
 .cardWrapper {
