--- a/app/components/FirstSurgery/FirstSurgery.module.css
+++ b/app/components/FirstSurgery/FirstSurgery.module.css
@@ -55,6 +55,7 @@
   padding: 10px;
   border-radius: 5px;
   margin-top: 10px;
+  margin-bottom: 20px;
   transition: background-color 0.3s;
   border-bottom: 2px solid #0b52d4;
 }
@@ -71,14 +72,19 @@
   list-style-type: disc;
   padding-left: 20px;
   margin-top: 10px;
-  color: #555;
+  color: #252222;
   line-height: 1.6;
   transition: max-height 0.3s ease-out;
   overflow: hidden;
+  font-weight: bold;
 }
 
 .firstSurgerySection ul li {
   padding: 5px 0;
+  list-style-type: disc;
+  padding-left: 20px;
+  margin-bottom: 5px;
+  line-height: 1.6;
 }
 
 .firstSurgeryText p {
@@ -89,12 +95,39 @@
   line-height: 1.6;
   transition: max-height 0.3s ease-out;
   overflow: hidden;
+  margin-bottom: 10px;
 }
 
-.children h4 {
-  font-size: 1em;
-  color: #666;
+.firstSurgeryText h4 {
+  font-size: 1.1em;
+  color: #e6076f;
   margin: 5px 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.firstSurgeryText h5 {
+  font-size: 1em;
+  color: #f107ca;
+  margin: 5px 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 0.9em;
+}
+
+.firstSurgeryText strong {
+  font-size: 1.2em;
+  color: #0b52d4;
+}
+
+.firstSurgeryText b {
+  font-size: 1.3em;
+  color: #e72b6a;
+}
+
+.firstSurgeryText u {
+  font-size: 1.2em;
+  color: #5277dd;
 }
 
 /* Адаптивність для екранів менших розмірів */
