--- a/app/components/DoctorsDepartment/DoctorsDepartment.module.css
+++ b/app/components/DoctorsDepartment/DoctorsDepartment.module.css
@@ -7,6 +7,10 @@
   text-align: center;
 }
 
+.headerSection h2 {
+  color: dodgerblue;
+}
+
 .headerTitle {
   font-size: 3rem;
   font-weight: bold;
