--- a/app/components/CardDirection/CardDirection.module.css
+++ b/app/components/CardDirection/CardDirection.module.css
@@ -23,7 +23,7 @@
   }
 
   .image {
-    width: 100%; /* Розтягуємо зображення */
+    width: 80%; /* Розтягуємо зображення */
     height: auto;
   }
 }
@@ -34,9 +34,10 @@
 
 .image {
   object-fit: cover;
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: 80%;
   border-radius: 10px;
+  margin: 10px;
 }
 
 .content {
