--- a/app/components/BanerFirstSurgery/BanerFirstSurgery.module.css
+++ b/app/components/BanerFirstSurgery/BanerFirstSurgery.module.css
@@ -66,6 +66,6 @@
   text-align: center; /* Центрування тексту по горизонталі */
   margin-top: 20px; /* Відступ зверху */
   margin-bottom: 20px; /* Відступ знизу */
-  color: aqua;
-  font-size: 1.6em;
+  color: rgb(10, 66, 219);
+  font-size: 1.8em;
 }
