--- a/app/components/Card/Card.module.css
+++ b/app/components/Card/Card.module.css
@@ -36,8 +36,8 @@
 
 /* Стиль зображення для горизонтальної картки */
 .cardHorizontal .cardImage {
-  width: 150px; /* Фіксована ширина для зображення */
-  height: 100%; /* Висота займає всю висоту картки */
+  width: 90%; /* Фіксована ширина для зображення */
+  height: 90%; /* Висота займає всю висоту картки */
   margin-right: 15px; /* Відступ від текстової частини */
 }
 
