--- a/app/components/MaternityHospital/MaternityHospital.module.css
+++ b/app/components/MaternityHospital/MaternityHospital.module.css
@@ -1,6 +1,6 @@
 /* Заголовок */
 .headerSection {
-  background-image: url('/images/pologhaus/polog.jpg'); /* Шлях до зображення */
+  background-image: url('/images/pologhaus/pologhfus1і.jpg'); /* Шлях до зображення */
   background-size: cover;
   background-position: center;
   height: 15cm; /* Фіксована висота */
