--- a/app/components/Gallery/Gallery.module.css
+++ b/app/components/Gallery/Gallery.module.css
@@ -44,8 +44,16 @@
 
 .imageContainer img {
   width: 100%; /* Зображення займає всю ширину контейнера */
-  height: 100%; /* Зображення займає всю висоту контейнера */
-  object-fit: cover; /* Забезпечує коректне заповнення контейнера без спотворення */
+  height: auto; /* Зображення займає всю висоту контейнера */
+  object-fit: contain; /* Зберігає пропорції зображення та вписує його в контейнер */
+  /* object-fit: cover, */
   display: block; /* Усуває зайвий простір навколо зображення */
   background-color: #f0f0f0; /* Фоновий колір для порожніх областей */
+}
+
+@media (max-width: 768px) {
+  .imageContainer {
+    width: 100%; /* Контейнер займатиме всю ширину */
+    height: auto; /* Автоматична висота */
+  }
 }
