--- a/app/components/CardAdresa/CardAdresa.module.css
+++ b/app/components/CardAdresa/CardAdresa.module.css
@@ -3,12 +3,12 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  background-color: #8bbbe2;
+  background-color: #00ffff;
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
-  border: 1px solid #55b1ee; /* Тонка рамка */
+  border: 1px solid #0e23dd; /* Тонка рамка */
 }
 
 /* .card:hover {
@@ -34,4 +34,15 @@
 .text {
   font-size: 16px;
   color: #2c2b2b;
+}
+.textList {
+  list-style: none; /* Забирає маркери списку */
+  padding: 0; /* Забирає внутрішні відступи */
+  margin: 0; /* Забирає зовнішні відступи */
+}
+
+.textList .text {
+  margin-bottom: 4px; /* Додає відступ між елементами списку */
+  line-height: 1.5; /* Поліпшує читабельність тексту */
+  font-size: 16px; /* Розмір шрифту */
 }
