--- a/app/components/CardDirection/CardDirection.module.css
+++ b/app/components/CardDirection/CardDirection.module.css
@@ -23,8 +23,8 @@
   }
 
   .image {
-    width: 80%; /* Розтягуємо зображення */
-    height: auto;
+    width: 50%; /* Розтягуємо зображення */
+    height: 100%;
   }
 }
 
