--- a/app/components/CardsDoctors/CardsDoctors.module.css
+++ b/app/components/CardsDoctors/CardsDoctors.module.css
@@ -1,11 +1,11 @@
 .card {
   display: flex;
-  flex-direction: column; /* За замовчуванням вертикальне розташування */
-  border: 1px solid #ddd;
+  flex-direction: column;
+  border: 1px solid #0c5986;
   border-radius: 8px;
   overflow: hidden;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: #f5f1f1;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.438);
   transition: box-shadow 0.3s ease;
 }
 
@@ -23,7 +23,7 @@
   }
 
   .image {
-    width: 100%; /* Розтягуємо зображення */
+    width: 50%; /* Розтягуємо зображення */
     height: auto;
   }
 }
@@ -34,9 +34,10 @@
 
 .image {
   object-fit: cover;
-  width: 100%;
+  width: 80%;
   height: 100%;
   border-radius: 10px;
+  padding: 10px;
 }
 
 .content {
@@ -45,12 +46,12 @@
 }
 
 .title {
-  font-size: 1.5rem;
+  font-size: 2rem;
   margin: 0 0 8px 0;
   color: #333;
 }
 
 .description {
-  font-size: 1rem;
+  font-size: 1.3rem;
   color: #666;
 }
